# boxmunge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  init  install.sh  pyproject.toml
bootstrap/: aide.sh  apparmor.sh  auditd.sh  crowdsec.sh  harden.sh  init-host.sh
caddy/: Caddyfile.template  compose.yml
canary/: Dockerfile  app.py  compose.yml  manifest.yml
cli/: pyproject.toml
cli/src/boxmunge_cli/: __init__.py  bundle_cmd.py  cli.py  config.py  handshake.py  init_cmd.py  manifest.py  mcp_proxy.py  ssh.py  ulid.py
cli/src/boxmunge_cli/server_setup/: __init__.py  command.py  preflight.py  progress.py  ssh_key.py  target.py
cli/src/boxmunge_cli/templates/: compose.yml  env.example  manifest.yml  smoke.sh
cli/tests/: conftest.py  test_bundle_cmd.py  test_cli.py  test_config.py  test_handshake.py  test_init_cmd.py  test_integration.py  test_mcp_proxy.py  test_ssh.py
cli/tests/test_server_setup/: test_command.py  test_preflight.py  test_progress.py  test_ssh_key.py  test_target.py
config/: boxmunge.yml.template
sample-project/: compose.yml  manifest.yml  project.env.example
scripts/: boxmunge-sftp  boxmunge-upgrade  build-installer.sh  generate-sbom.sh  install-local.sh
system/: Dockerfile  compose.yml
systemd/: boxmunge-auto-update.service  boxmunge-auto-update.timer  boxmunge-backup-sync.service  boxmunge-backup-sync.timer  boxmunge-backup.service  boxmunge-backup.timer  boxmunge-container-update.service  boxmunge-container-update.timer  boxmunge-cve-scan.service  (+3 more)
(+256 files in other folders)
