[project]
name = "boxmunge"
version = "0.1.0"
description = "Local CLI for boxmunge — deploy to your VPS in one command"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
]

[project.scripts]
boxmunge = "boxmunge_cli.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
boxmunge_cli = ["templates/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
